no purple here, gray yes

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -16,7 +16,7 @@ h3 {
   height: 0; 
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
-  border-bottom: 20px solid #9c27b0;
+  border-bottom: 20px solid #757575;
   position: absolute;
   margin-top: -29px;
   /* margin-left: 45px;
