WIP: cor header regras

--- a/www/views/rules.html
+++ b/www/views/rules.html
@@ -1,5 +1,5 @@
 <div class="page">
-  <div class="header blue">
+  <div class="header grey-600">
     <div class="left">
       <button class="icon ion-ios-arrow-back" onclick="backPage()"></button>
     </div>
