--- a/www/views/rules.html
+++ b/www/views/rules.html
@@ -48,12 +48,14 @@
         </tr>
       </table>
 
-      <p class="small">* A pontuação pode ser definidas pelos jogadores</p>
+      <p class="small">* A pontuação pode ser definida pelos jogadores</p>
       <p class="small">** A quantidade de varetas pode variar de acordo com o fabricante</p>
+
+      <p class="source">Fonte: Wikipédia</p>
 
       <p class="see-more">
         <b>Veja mais:</b>
-        <a class="link" href="https://pt.wikipedia.org/wiki/Pega_Varetas">Pega Varetas - Wikipedia</a>
+        <a class="link" href="https://pt.wikipedia.org/wiki/Pega_Varetas">Pega Varetas - Wikipédia</a>
         <a href="http://tempojunto.com/2016/09/29/pega-vareta-e-um-jogo-que-estimula-a-paciencia-e-a-coordenacao-motora-fina-das-criancas/">Pega-vareta é um jogo que estimula a paciência e a coordenação motora fina das crianças</a>
       </p>
     </div>
