--- a/www/css/index.css
+++ b/www/css/index.css
@@ -2,26 +2,32 @@ a {
   color: #3f51b5;
   text-decoration: underline;
 }
+
 h3 {
   font-size: 40px;
   font-weight: normal;
 }
+
 a {
   text-decoration: none;
 }
+
 .font-titan {
   font-family: 'Titan One', cursive;
 }
+
 .font-share {
   font-family: 'Share', cursive;
 }
+
 .header-players {
   padding-top: 15px;
   padding-bottom: 25px;
 }
+
 .arrow-up {
-  width: 0; 
-  height: 0; 
+  width: 0;
+  height: 0;
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
   border-bottom: 20px solid #757575;
@@ -29,51 +35,65 @@ a {
   margin-top: -29px;
   margin-left: 4px;
 }
+
 .arrow-0 {
   margin-left: 4px;
 }
+
 .arrow-1 {
   margin-left: 52px;
 }
+
 .arrow-2 {
   margin-left: 100px;
 }
+
 .arrow-3 {
   margin-left: 148px;
 }
+
 .arrow-4 {
   margin-left: 196px;
 }
+
 .arrow-5 {
   margin-left: 244px;
 }
+
 .player {
   margin: 0 3px;
 }
+
 .active-player button {
-  background-color: #757575!important;
+  background-color: #757575 !important;
   color: #FFF;
 }
+
 .winner button {
   border: 2px solid #f9a825;
   color: #f9a825;
 }
+
 #player-name .ion-record {
   position: absolute;
   margin-top: -8px;
   left: 0;
 }
+
 #player-name {
   padding-top: 10px;
 }
+
 #player-name span {
   padding-left: 30px;
   position: relative;
 }
+
 .active-player.winner button {
-  background-color: #f9a825!important;
+  background-color: #f9a825 !important;
   color: #fff !important;
 }
+
 .player .ion-record {
   position: absolute;
   top: 5px;
@@ -81,58 +101,96 @@ a {
   font-size: 23px;
   color: #f9a825 !important;
 }
+
 .active-player.winner i {
   display: none;
 }
+
 .edit-player {
   position: absolute;
   right: 10px;
   top: 105px;
 }
+
 #no-player-content {
   display: none;
 }
+
 #no-player-content .row {
   height: 100%;
 }
+
 .justify {
   text-align: justify
 }
+
 .table {
   border-collapse: collapse;
   width: 100%;
 }
+
 .table tr td,
 .table tr th {
   border: 1px solid #757575;
   padding: 5px;
 }
+
 .table tr th {
   background-color: #e0e0e0
 }
+
 .content-rules .padding {
   padding: 20px;
 }
+
 .content-rules p {
   margin-bottom: 20px;
 }
+
 .content-rules p.small {
   font-size: 12px;
   font-style: italic;
   color: #757575;
   margin-bottom: 0;
 }
+
 .content-rules p.source {
   margin-top: 20px;
 }
+
 .see-more {
   margin-top: 20px;
 }
+
 .see-more b {
   display: block;
   margin-bottom: 10px;
 }
+
 .see-more a {
   display: block;
   margin-bottom: 5px;
+}
+
+#input-players {
+  padding: 10px;
+}
+
+#input-players input {
+  background-color: #FFF;
+  font-size: 18px;
+  border-radius: 4px;
+  padding: 10px;
+  margin: 2px 0;
+}
+
+#input-players input:last-child {
+  margin-bottom: 0;
+}
+
+.link-add-right {
+  line-height: 20px;
+  min-height: 10px;
+  margin-bottom: 20px;
+  font-size: 14px;
 }
