feat: screen to add many players for first access

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -204,3 +204,9 @@ a {
   margin-bottom: 20px;
   font-size: 14px;
 }
+
+#player-content,
+#first-players-content,
+#no-player-content {
+  display: none;
+}
